--- a/_config.yml
+++ b/_config.yml
@@ -91,3 +91,21 @@ sass:
 plugins: [jekyll-paginate, jekyll-seo-tag]
 theme: type-on-strap # If using the theme as a jekyll theme gem
 exclude: ["Gemfile", "Gemfile.lock", "type-on-strap.gemspec", "*.gem", "LICENSE", "README.md", "screenshot.png"]
+
+
+# INFORMATION
+team:
+  - username: maiarafa10
+    name: Rafael Maia
+    title: Developer
+    avatar: /assets/images/maia_180x180.jpg
+    description: >
+      Primeiro eu queria cumprimentar os internautas. -Oi Internautas! Depois dizer que o meio ambiente é sem dúvida nenhuma uma ameaça ao desenvolvimento sustentável.
+      E isso significa que é uma ameaça pro futuro do nosso planeta e dos nossos países. O desemprego beira 20%,
+      ou seja, 1 em cada 4 portugueses.
+  - username: maiarafa20
+    name: Rafael Maia2
+    title: Developer
+    avatar: null
+    description: >
+      Write something about you here
