--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ url: "http://devnagringa.com"
 theme_settings:
   # Meta
   title: Dev na Gringa
-  avatar: /assets/img/triangle.svg
-  favicon: /assets/favicon.ico
+  avatar: /assets/images/triangle.svg
+  favicon: /assets/images/favicon.ico
   gravatar: # Email MD5 hash
   description: "A website with blog posts and pages" # used by search engines
 
@@ -18,8 +18,7 @@ theme_settings:
      Ultimas postagens
   header_text_feature_image: a/ssets/img/pexels/triangular.jpeg
   footer_text: >
-   Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
-
+   Powered by <a href="https://jekyllrb.com/">Jekyll</a>
   # Icons
   rss: true
   email_address: # Full email address, e.g. "sam@example.com"
