--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ theme_settings:
   google_analytics: "UA-114036141-1"
   disqus_shortname:
   katex: true # Enable if using math markup
-  portfolio: true
+  podcast: true
   search: true
   tags: true
 
@@ -77,7 +77,7 @@ paginate_path: "page:num"
 
 # PORTFOLIO
 collections:
-  portfolio:
+  podcast:
     output: true
     permalink: /:collection/:name
 
@@ -88,8 +88,8 @@ sass:
   sass_dir: _sass
   style: :compressed
 plugins: [jekyll-paginate, jekyll-seo-tag]
-theme: type-on-strap # If using the theme as a jekyll theme gem
-exclude: ["Gemfile", "Gemfile.lock", "type-on-strap.gemspec", "*.gem", "LICENSE", "README.md", "screenshot.png"]
+theme: devnagringa # If using the theme as a jekyll theme gem
+exclude: ["Gemfile", "Gemfile.lock", "devnagringa.gemspec", "*.gem", "LICENSE", "README.md", "screenshot.png"]
 
 
 # INFORMATION
